# GWBot

./: .gitignore  Cargo.toml  README.md
datas/: attributes_en_US.csv  attributes_fr_FR.csv  bonus_pve_fr_FR.csv  bonus_pvp_fr_FR.csv  bz_fr_FR.csv  cz_en_US.csv  cz_fr_FR.csv  message_en_US.csv  message_fr_FR.csv  mz_fr_FR.csv  nicolas_traveler_en_US.csv  nicolas_traveler_fr_FR.csv  professions_en_US.csv  professions_fr_FR.csv  skills.csv  skills_en_US.csv  skills_fr_FR.csv  special_events.csv  special_events_fr_FR.csv  vz_fr_FR.csv
fetch_skills/: .gitignore  fetch.js  fetch_icon.js  package-lock.json  package.json
src/: constants.rs  enums.rs  main.rs
src/commands/: bonus.rs  bonusnext.rs  event.rs  lang.rs  menu.rs  mod.rs  nick.rs  nicknext.rs  ping.rs  skill.rs  utc.rs  zq.rs  zqnext.rs
src/utils/: mod.rs  skill.rs  time.rs
