[package]
name = "gw-bot"
version = "0.1.0"
authors = ["Barogthor <f.thery3103@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.9.0-rc.1", features = ["framework", "standard_framework", "client", "collector", "gateway", "model"] }
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
base64 = "0.12.3"
#byteorder = "1.3.4"
lazy_static = "1.4.0"
serenity_utils = "0.5.0"
chrono = "0.4.18"

[dev-dependencies]
pretty_assertions = "0.6.1"