[package]
name = "gw-bot"
version = "0.1.0"
authors = ["Barogthor <f.thery3103@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.11.5", features = ["framework", "standard_framework", "client", "collector", "gateway", "model"] }
serenity_utils = "0.7.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
base64 = "0.13.1"
#byteorder = "1.3.4"
image = { version = "0.23.10" }
chrono = "0.4.18"

[dev-dependencies]
pretty_assertions = "1.3.0"